--- a/templates/index.html
+++ b/templates/index.html
@@ -3,15 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <title>RFID Demo</title>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.2/socket.io.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.2/socket.io.js"></script>
 
 </head>
 <body>
 
-
+<input type="text" value="1" id="quantity">
 <button id="start">开始</button>
 <button id="stop">暂停</button>
-<p id="num" value="0">0</p>
+<div class="container">
+  <div class="jumbotron">
+    <h1>异步通讯Flask</h1>
+    <p>一键启动，暂停实时局部数据打印,可输入数字实时展示个数，然后结合实际场景变换，修改即可</p>
+    <p>github <a href='https://github.com/kingfei521/websocket.git' target='_blank'>here.</a></p>
+  </div>
+</div>
+
+</div>
+
+<div class="container" id="content">
+    <div class="row">
+        <p>下面的数据也可以局部刷新一个:</p>
+        <h3>Number list:</h3>
+        <div id="poi">
+        </div> <!-- /#log -->
+    </div>
+</div>
 <script src="http://libs.baidu.com/jquery/1.8.3/jquery.min.js"></script>
 <script type="text/javascript">
     $(document).ready(function() {
@@ -20,8 +37,8 @@
             //建立长连接
             var  websocket_url = location.protocol + '//' + document.domain + ':' + location.port + '/XXXprojext';
             var socket = io.connect(websocket_url);
-
-            //给服务端发消息
+            var numbers_received = [];
+            //给服务端发消息建立连接
             socket.emit('request_for_response',{'code': 200, 'from_server': 'Success!'});
 
             //响应服务端的回调函数，告知服务端，客户端已收到消息
@@ -44,9 +61,29 @@
 
             //接收do_something方法返回的数据
             socket.on('do_somrthing', function (res) {
-                    var num = document.getElementById('num');
-                    num.innerHTML = res.num;
-                });
+
+                    var quantity = $('#quantity').val();
+                    if (quantity < numbers_received.length){
+                        numbers_received.length = quantity;
+                    }
+
+                    if (numbers_received.length >= quantity){
+                        numbers_received.shift();
+                    }
+
+                    numbers_received.push(res.num);
+
+                    // console.log(numbers_received)
+                    numbers_string = '';
+                    for (var i = 0; i < numbers_received.length; i++){
+                        $('#poi').html('');
+                        numbers_string = numbers_string + '<p>' + numbers_received[i].toString() + '</p>';
+                        $('#poi').html(numbers_string);
+                    }
+
+
+
+            });
         });
 </script>
 
