--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,8 @@
     <title>RFID Tool</title>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.2/socket.io.js"></script>
     <link rel="stylesheet" href="../static/css/tablesone.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/normalize.css" /><!--CSS RESET-->
+	<link rel="stylesheet" href="../static/css/main.css">
 
 </head>
 
@@ -24,11 +26,19 @@
 <body>
 
 <!--<input type="text" value="1" id="quantity">-->
-<button id="start">开始</button>
-<button id="stop">暂停</button>
+
 
 
 <h1>RFID Reader</h1>
+
+<div class="btn-border btn-round btn-blue btn9 " >
+    <button class="btn btn-blue" style="margin-left: 520px" id="start">Start Scan</button>
+    <button class="btn btn-blue" style="margin-left: 685px" id="stop">Stop Scan</button>
+</div>
+
+<!--<div class="btn-border btn-round btn-blue btn9 " id="stop">-->
+<!--    -->
+<!--</div>-->
 
 <section>
   <!--for demo wrap-->
@@ -110,7 +120,6 @@
                         rssi.innerHTML = res.data.Rssi;
                         status.innerHTML = res.data.Status
                     }else {
-                        console.log(res.data.Time)
                         $('#insert').append('<tr id='+ res.data.Epc + '>' +
                                                 '<td class="datetime">' + res.data.Time + '</td>' +
                                                 '<td class="epc">' + res.data.Epc + '</td>' +
@@ -128,6 +137,6 @@
         });
 </script>
 
-
+<script src="../static/js/main.js"></script>
 </body>
 </html>
