--- a/templates/index.html
+++ b/templates/index.html
@@ -31,19 +31,15 @@
 
 <h1>RFID Reader</h1>
 
-<div class="btn-border btn-round btn-blue btn9 " >
-    <button class="btn btn-blue" style="margin-left: 520px" id="start">Start Scan</button>
-    <button class="btn btn-blue" style="margin-left: 685px" id="stop">Stop Scan</button>
+<div class="btn-border btn-round btn-blue btn9 " style="padding: 0px 45px" >
+    <button class="btn btn-green" style="margin-left: 160px; position: absolute" id="start">Start Scan</button>
+    <button class="btn btn-red"  id="stop">Stop Scan</button>
 </div>
-
-<!--<div class="btn-border btn-round btn-blue btn9 " id="stop">-->
-<!--    -->
-<!--</div>-->
 
 <section>
   <!--for demo wrap-->
     <div class="tbl-header">
-        <table cellpadding="0" cellspacing="0" border="0">
+        <table>
             <thead>
                 <tr>
                     <th class="datetime">DateTime</th>
@@ -61,7 +57,7 @@
     </div>
 <!--    # data area-->
     <div class="tbl-content">
-        <table cellpadding="0" cellspacing="0" border="0">
+        <table>
             <tbody id="insert">
 
             </tbody>
