--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
     </div>
 </section>
 
-<script src="http://libs.baidu.com/jquery/1.8.3/jquery.min.js"></script>
+<script src="../static/js/jquery-1.8.3.min.js"></script>
 <script type="text/javascript">
 
     $(document).ready(function() {
